z-index fixed for header

--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,7 @@ hr{
 	background-color: rgba(1, 1, 1, 0.85);
 	color: rgba(1, 1, 1, 0.8);
 	margin-bottom: 50px;
+	z-index: 9999;
 }
 
 .title a{
